styling close. Still have to fix player combat alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,6 @@ button{
   }
 
   p{
-    font-size: 15px;
+    font-size: 20px;
   }
 }
